# Grapheteria

./: .gitignore  README.md  README.md (lines 10-10)  ReAct_agent_flow.json  machine.py  mcp.json  nodes.py  orchestrator.md  orchestrator_cli.py  pyproject.toml  redis_testing.py  requirements.txt  server.py  state_machine.py  test.py  test_flow.json  utils.py  workflow.json  workflowTwo.json
.github/workflows/: pages.yml  test.yml
core/: machine.py  storage.py
docs/: _config.yml  index.md
docs/Advanced/: Advanced-Nodes.md  Advanced_Nodes.md  Deployment.md  Event_Driven.md  Extending_Logging.md  Human-in-the-loop.md  Human_in_the_loop.md  index.md
docs/Concepts/: index.md  state_machines.md
docs/Cookbook/: Human_in_the_loop.md  MCP_tool_calling.md  index.md
docs/Core/: Edge.md  Logging.md  Node.md  Shared.md  Workflow.md  index.md
docs/Core/UI/: Debug.md  Logs.md  Overview.md  Troubleshooting.md  index.md
docs/_site/: index.html
docs/_site/Advanced/: Advanced_Nodes.html  Deployment.html  Event-Driven.md  Event_Driven.html  Extending-Logging.md  Extending_Logging.html  Human_in_the_loop.html  index.html
docs/_site/Concepts/: index.html  state_machines.html
docs/_site/Cookbook/: Human_in_the_loop.html  MCP_tool_calling.html  index.html
docs/_site/Core/: Edge.html  Logging.html  Node.html  Shared.html  Workflow.html  index.html
docs/_site/Core/UI/: Debug.html  Logs.html  Overview.html  Troubleshooting.html  index.html
docs/_site/assets/css/: just-the-docs-dark.css.map  just-the-docs-default.css.map  just-the-docs-light.css.map
docs/_site/assets/js/: search-data.json
examples/: basic_orchestrator_usage.py  tool_integration_example.py
examples/a2a/: README.md  client.py  flow.py  main.py  task_manager.py
examples/a2a/common/client/: card_resolver.py  client.py
examples/a2a/common/server/: server.py  task_manager.py  utils.py
examples/human_in_the_loop/: .env  README.md  deploy.py  main.py  nodes.py  utils.py  workflow.json
examples/mcp_tool_calling/: .env  README.md  deploy.py  main.py  mcp_server.py  nodes.py  utils.py  workflow.json
grapheteria/: __init__.py  build_hooks.py  utils.py
grapheteria/composio/: __init__.py  tool_enums.py
grapheteria/generator/: ReACT_code.txt  ReACT_schema.json  grapheteria_guidelines.md  workflow_generator.py
grapheteria/server/: main.py  routes.py  workflow_manager.py
grapheteria/server/handlers/: inbound_handler.py  outbound_handler.py
grapheteria/server/static/ui/: index.html
grapheteria/server/utils/: scanner.py
grapheteria/toolregistry/: class_tool_integration.py  mcp_integration.py  tool_registry.py
grapheteria/ui/: components.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
grapheteria/ui/src/: App.tsx
grapheteria/ui/src/components/: AIUpdateDrawer.tsx  CodeEditor.tsx  CustomConnectionLine.tsx  CustomEdge.tsx  CustomNode.tsx  DebugDrawer.tsx  IntegrationSelector.tsx  IntegrationsPanel.tsx  JSONDrawer.tsx  MCPConnectionManager.tsx
grapheteria/ui/src/pages/: FlowView.tsx  HomePage.tsx  (+1 more)
logs/ReAct_agent_flow/20250409_175830_497/: state.json
logs/test_flow/20250408_163935_251/: state.json
logs/test_flow/20250408_164400_308/: state.json
logs/test_flow/20250408_165013_527/: state.json
logs/test_flow/20250408_165047_977/: state.json
logs/test_flow/20250408_165852_358/: state.json
logs/test_flow/20250408_170705_177/: state.json
logs/test_flow/20250408_180714_302/: state.json
logs/test_flow/20250408_182300_400/: state.json
logs/test_flow/20250408_182318_015/: state.json
logs/test_flow/20250408_182326_638/: state.json
logs/test_flow/20250408_205913_021/: state.json
logs/test_flow/20250408_205942_371/: state.json
logs/test_flow/20250409_120822_303/: state.json
logs/test_flow/20250409_122456_803/: state.json
machine/: __init__.py  storage.py  utils.py
orchestrator/: README.md  __init__.py  cli.py  requirements.txt  task_orchestrator.py
orchestrator/generators/: __init__.py  workflow_generator.py
orchestrator/tools/: __init__.py  composio_tools.py  tool_enums.py  tool_manager.py  tools.json
server/: main.py  routes.py  workflow_manager.py  workflow_server.py
server/handlers/: file_handlers.py  inbound_handler.py  outbound_handler.py
server/utils/: scanner.py
tests/: conftest.py  test_advanced_nodes.py  test_edges.py  test_logs.py  test_logs_extended.py  test_nodes.py  test_shared.py  test_workflows.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: CodeEditor.tsx  CustomEdge.tsx  CustomNode.tsx  DebugDrawer.tsx  JSONDrawer.tsx
ui/src/pages/: FlowView.tsx  LogsPage.tsx
ui/src/stores/: useStore.ts
ui/src/types/: types.ts
ui/src/utils/: debugActions.ts  graphActions.ts  logsApi.ts  messageHandler.ts
(+24 files in other folders)
