[build-system]
requires = ["hatchling", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "grapheteria"
version = "0.0.0"
description = "A structured framework bringing uniformity to agent orchestration! "
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Tejas Ravishankar", email = "tejas.ravishankar@gmail.com"},
]
keywords = ["workflow", "automation", "agentic-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "dill",
    "fastapi",
    "websockets",
    "watchdog"
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/beubax/grapheteria"
Documentation = "https://github.com/beubax/grapheteria#readme"
Issues = "https://github.com/beubax/grapheteria/issues"
Changelog = "https://github.com/beubax/grapheteria/blob/main/CHANGELOG.md"

[project.scripts]
grapheteria-app = "grapheteria.server.main:run_app"

[tool.hatch.build]
artifacts = [
    "grapheteria/server/static/ui",
]

[tool.hatch.build.hooks.custom]
path = "grapheteria/build_hooks.py"

[tool.hatch.build.targets.wheel]
packages = ["grapheteria"]
include = ["grapheteria/server/static/ui"]
exclude = [
    "grapheteria/ui/**",
    "grapheteria/**/node_modules",
    "**/*.ts",
    "**/*.tsx",
    "**/*.js.map",
    "**/package.json",
    "**/package-lock.json",
    "**/tsconfig.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "grapheteria",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
    ".git/",
    ".github/",
    "venv/",
    "*.egg-info/",
    "grapheteria/**/node_modules",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"